# testcontainers-rs

./: .dprintrc.json  .gitignore  .mergify.yml  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PRINCIPLES.md  LICENSE-Apache-2.0  LICENSE-MIT  PRD-HostPortExposure-zh.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  bors.toml  cliff.toml  dprint.json  mkdocs.yml  release-plz.toml
.cargo/: audit.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml  docker.override.conf
.github/workflows/: audit.yml  ci.yml  nightly.yml  publish-new-release.yml  release.yml
.local/: a.txt
cli_client/: Cargo.toml
cli_client/src/: cli.rs  docker_inspect_response.json  lib.rs
cli_client/tests/: waits_before_fetching_logs.rs
core/: Cargo.toml
core/src/: container.rs  docker.rs  image.rs  lib.rs  wait_for_message.rs
docs/: contributing_docs.md  getting_help.md  index.md
docs/features/: building_images.md  configuration.md  creating_container.md  docker_compose.md  exec_commands.md  files.md  networking.md  wait_strategies.md
docs/quickstart/: community_modules.md  testcontainers.md
docs/system_requirements/: docker.md
images/: README.md
images/coblox_bitcoincore/: Cargo.toml  README.md
images/coblox_bitcoincore/examples/: get_new_address.rs
images/coblox_bitcoincore/src/: image.rs  lib.rs
images/dynamodb_local/: Cargo.toml  README.md
images/dynamodb_local/src/: image.rs  lib.rs
images/elasticmq/: Cargo.toml  README.md
images/elasticmq/src/: image.rs
images/generic/: Cargo.toml  README.md
images/generic/src/: image.rs
images/parity_parity/: Cargo.toml
images/parity_parity/examples/: list_accounts.rs
images/parity_parity/src/: image.rs  lib.rs
images/postgres/: Cargo.toml  README.md
images/postgres/src/: image.rs
images/redis/: Cargo.toml  README.md
images/redis/src/: image.rs  lib.rs
images/trufflesuite_ganachecli/: Cargo.toml  README.md
images/trufflesuite_ganachecli/examples/: list_accounts.rs
images/trufflesuite_ganachecli/src/: image.rs  lib.rs  web3_client.rs
src/: clients.rs  core.rs  images.rs  lib.rs
src/clients/: cli.rs  client.rs  http.rs  shiplift.rs
src/core/: container.rs  container_async.rs  docker.rs  docker_async.rs  image.rs  image_async.rs  logs.rs  network.rs  ports.rs  run_args.rs  wait_for_message.rs  wait_for_message_async.rs
src/images/: coblox_bitcoincore.rs  dynamodb_local.rs  elastic_search.rs  elasticmq.rs  eventstoredb.rs  generic.rs  generic_async.rs  google_cloud_sdk.rs  google_cloud_sdk_emulators.rs  (+12 more)
testcontainers/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-Apache-2.0  README.md
testcontainers-images/: Cargo.toml
testcontainers-images/src/: lib.rs
testcontainers-images/src/coblox_bitcoincore/: mod.rs
testcontainers-images/src/dynamodb_local/: mod.rs
testcontainers-images/src/elastic_search/: mod.rs
testcontainers-images/src/elasticmq/: mod.rs
testcontainers-images/src/google_cloud_sdk_emulators/: mod.rs
testcontainers-images/src/kafka/: mod.rs
testcontainers-images/src/minio/: mod.rs
testcontainers-images/src/mongo/: mod.rs
testcontainers-images/src/orientdb/: mod.rs
testcontainers-images/src/parity_parity/: mod.rs
testcontainers-images/src/postgres/: mod.rs
testcontainers-images/src/rabbitmq/: mod.rs
testcontainers-images/src/redis/: mod.rs
testcontainers-images/src/trufflesuite_ganachecli/: mod.rs
testcontainers-images/src/zookeeper/: mod.rs
testcontainers/examples/: host_port_exposure_demo.rs  usage.rs
testcontainers/src/: api.rs  clients.rs  core.rs  docker_cli.rs  images.rs  lib.rs  utils.rs  wait_for_message.rs  watchdog.rs
testcontainers/src/buildables/: generic.rs
testcontainers/src/clients/: cli.rs  http.rs  mod.rs
testcontainers/src/compose/: builder.rs  client.rs  error.rs  mod.rs
testcontainers/src/compose/client/: containerised.rs  local.rs
testcontainers/src/core/: async_drop.rs  build_context.rs  buildable.rs  client.rs  container.rs  container_async.rs  copy.rs  env.rs  error.rs  errors.rs  healthcheck.rs  host_port_mapping.rs  image.rs  logs.rs  macros.rs  mounts.rs  network.rs  ports.rs
testcontainers/src/core/client/: bollard_client.rs  exec.rs  factory.rs
testcontainers/src/core/containers/: async_container.rs  host.rs  mod.rs  request.rs  sync_container.rs
testcontainers/src/core/containers/async_container/: exec.rs  raw.rs
testcontainers/src/core/containers/sync_container/: exec.rs  sync_reader.rs
testcontainers/src/core/env/: config.rs
testcontainers/src/core/image/: exec.rs  exec_command.rs  image_ext.rs  runnable_image.rs  wait_for.rs
testcontainers/src/core/logs/: consumer.rs  stream.rs
testcontainers/src/core/logs/consumer/: logging_consumer.rs
testcontainers/src/core/runners/: async_runner.rs  mod.rs  sync_runner.rs
testcontainers/src/core/wait/: cmd_wait.rs  command_strategy.rs  exit_strategy.rs  health_strategy.rs  http_strategy.rs  log_strategy.rs  mod.rs
testcontainers/src/images/: coblox_bitcoincore.rs  docker_cli.rs  dragonfly.rs  generic.rs  google_cloud_sdk_emulators.rs  hello_world.rs  kafka.rs  local_stack.rs  mod.rs  mongo.rs  mysql.rs  socat.rs
testcontainers/src/runners/: async_builder.rs  async_runner.rs  mod.rs  sync_builder.rs  sync_runner.rs
testcontainers/tests/: async_runner.rs  cli_client.rs  compose.rs  container.rs  dual_stack_host_ports.rs  dynamodb_local.rs  elasticmq.rs  host_port_exposure.rs  host_port_mapping.rs  http_client.rs  images.rs  kafka.rs  local_stack.rs  minio.rs  rabbitmq.rs  sync_runner.rs  test-compose.yml
testcontainers/tests/compose/cp-all-in-one-community/: docker-compose.yml
testcontainers/tests/compose/cp-all-in-one-kraft/: docker-compose.yml
testcontainers/tests/compose/elastic/: docker-compose.yml
testcontainers/tests/compose/profiles/: docker-compose.yml
testcontainers/tests/compose/simple/: docker-compose.yml
testimages/: .dockerignore  Cargo.toml  README.md  build.rs
tests/: Dockerfile  README.md  cli_client.rs  http_client.rs  images.rs  kafka.rs  podman.rs  shiplift_client.rs
(+13 files in other folders)
