[package]
name = "tc_cli_client"
version = "0.1.1"
authors = [ "CoBloX developers <team@coblox.tech>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers"]
description = "An implementation of the testcontainers `Docker` trait that uses the Docker CLI to issue the necessary commands to the docker daemon."

[dependencies]
tc_core = { path = "../core", version = "0.2" }
serde = "1"
serde_json = "1"
serde_derive = "1"
log = "0.4"

[dev-dependencies]
spectral = "0.6"
pretty_env_logger = "0.2"
