[package]
name = "tc_core"
version = "0.3.1"
authors = [ "CoBloX developers <team@coblox.tech>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/testcontainers/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers"]
description = "Core crate of testcontainers, a library for integration-testing against docker containers from within Rust."

[dependencies]
log = "0.4"
debug_stub_derive = "0.3"
