[package]
name = "testcontainers"
version = "0.20.0"
categories = ["development-tools::testing"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A library for integration-testing against docker containers from within Rust."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = { version = "0.1" }
bollard = { version = "0.16.1", features = ["ssl"] }
bollard-stubs = "=1.44.0-rc.2"
bytes = "1.6.0"
conquer-once = { version = "0.4", optional = true }
dirs = "5.0.1"
docker_credential = "1.3.1"
either = "1.12.0"
futures = "0.3"
log = "0.4"
memchr = "2.7.2"
parse-display = "0.9.0"
pin-project-lite = "0.2.14"
reqwest = { version = "0.12.5", features = ["rustls-tls", "rustls-tls-native-roots", "hickory-dns", "json", "charset", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde-java-properties = { version = "0.2.0", optional = true }
serde_json = "1"
serde_with = "3.7.0"
signal-hook = { version = "0.3", optional = true }
thiserror = "1.0.60"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["io"] }
url = { version = "2", features = ["serde"] }

[features]
default = []
blocking = []
watchdog = ["signal-hook", "conquer-once"]
properties-config = ["serde-java-properties"]

[dev-dependencies]
anyhow = "1.0.86"
pretty_env_logger = "0.5"
reqwest = { version = "0.12.4", features = ["blocking"], default-features = false }
testimages.workspace = true
tokio = { version = "1", features = ["macros"] }
