[package]
name = "tc_coblox_bitcoincore"
version = "0.3.1"
authors = [ "CoBloX developers <team@coblox.tech>" ]
description = "Testcontainers image for the coblox/bitcoin-core docker image."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "bitcoin"]

[dependencies]
tc_core = { path = "../../core", version = "0.2" }
log = "0.4"
hmac = "0.7"
sha2 = "0.7"
hex = "0.3"
rand = "0.5"
