[package]
name = "tc_generic"
version = "0.2.1"
authors = [ "Francesco Cina <ufoscout@gmail.com>" ]
description = "Testcontainers generic image"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers"]

[dependencies]
tc_core = { path = "../../core", version = "0.3" }
