[package]
name = "tc_parity_parity"
version = "0.2.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]
description = "Testcontainers image for the parity/parity docker image."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "parity", "ethereum"]

[dependencies]
tc_core = { path = "../../core", version = "0.1.0" }
log = "0.4"

[dev-dependencies]
web3 = "0.4"

