[package]
name = "tc_parity_parity"
version = "0.2.1"
authors = [ "CoBloX developers <team@coblox.tech>" ]
description = "Testcontainers image for the parity/parity docker image."
license = "MIT OR Apache-2.0"
repository = "https://github.com/testcontainers/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "parity", "ethereum"]

[dependencies]
tc_core = { path = "../../core", version = "0.2" }
log = "0.4"

[dev-dependencies]
web3 = "0.4"

