[package]
name = "tc_postgres"
version = "0.1.0"
authors = [ "Thomas Eizinger <thomas@eizinger.io>" ]
description = "Testcontainers image for the postgres docker image."
license = "MIT OR Apache-2.0"
repository = "https://github.com/testcontainers/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "database", "postgres"]

[dependencies]
tc_core = { path = "../../core", version = "0.2" }
log = "0.4"
