[package]
name = "tc_redis"
version = "0.2.0"
authors = [ "Jack Wright <ayax79@gmail.com>" ]
description = "Testcontainers image for Redis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/testcontainers/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "redis"]

[dependencies]
tc_core = { path = "../../core", version = "0.3" }
