[package]
name = "tc_trufflesuite_ganachecli"
version = "0.3.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]
description = "Testcontainers image for the trufflesuite/ganache-cli docker image."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "ethereum"]

[dependencies]
tc_core = { path = "../../core", version = "0.1" }

[dev-dependencies]
web3 = "0.4"
