[package]
name = "tc_trufflesuite_ganachecli"
version = "0.3.1"
authors = [ "CoBloX developers <team@coblox.tech>" ]
description = "Testcontainers image for the trufflesuite/ganache-cli docker image."
license = "MIT OR Apache-2.0"
repository = "https://github.com/testcontainers/testcontainers-rs"
categories = ["development-tools::testing"]
keywords = ["docker", "testcontainers", "ethereum"]

[dependencies]
tc_core = { path = "../../core", version = "0.2" }

[dev-dependencies]
web3 = "0.4"
